# ArduinoDataAnalyser

./: README.md
CoreLibs/: CMakeLists.txt  SerialPort.cpp
lib/: App.cpp  CMakeLists.txt  SerialPort.cpp
src/: CMakeLists.txt  main.cpp
src/lib/: App.cpp  CMakeLists.txt
